# grafanaFastMCP

./: .flake8  .gitignore  CHANGELOG.md  COPILOT.md  Dockerfile  ISSUES.md  Makefile  README.md  __version__.py  env.example  github_fix_description.md  github_issue_description.md  instructions.md  pyproject.toml  release.md  requirements.txt  run_app.py  version.py
.githooks/: sync_copilot.sh
.github/workflows/: pr-package.yml  publish-pypi.yml  python-package.yml
.sonar/: report-task.txt
.sonarlint/: connectedMode.json
app/: __init__.py  __main__.py  config.py  context.py  grafana_client.py  instructions.py  main.py  patches.py  server.py
app/tools/: __init__.py  _label_matching.py  admin.py  alerting.py  asserts.py  availability.py  dashboard.py  datasources.py  incident.py  loki.py  navigation.py  oncall.py  prometheus.py  pyroscope.py  search.py  sift.py
mcp/: __init__.py
mcp/server/: __init__.py  fastmcp.py  streamable_http.py
scripts/: sync_copilot_instructions.py
tests/: conftest.py  test_config.py  test_config_tls_env.py  test_context.py  test_entrypoints.py  test_fastmcp_schema_normalization.py  test_fastmcp_stdio.py  test_grafana_client.py  test_instructions.py  test_main.py  test_main_check_connection.py  test_patches.py  test_patches_extra.py  test_server.py  test_streamable_http_accept.py  test_tool_availability.py  test_tools_admin.py  test_tools_alerting.py  test_tools_asserts.py  test_tools_dashboard.py  test_tools_datasources.py  test_tools_incident.py  test_tools_label_matching.py  test_tools_loki.py  test_tools_navigation.py  test_tools_oncall.py  test_tools_prometheus.py  test_tools_pyroscope.py  test_tools_registration.py  test_tools_search.py  test_tools_sift.py
