[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "grafana-fastmcp"
version = "1.2.1"
description = "Python Grafana FastMCP server/CLI with SSE, Streamable HTTP and STDIO transports"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Alessander de Souza Goulart" }
]
keywords = ["grafana", "mcp", "observability", "prometheus", "loki", "pyroscope", "oncall", "sift"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "httpx>=0.27",
  "mcp>=0.1.0",
  "python-dotenv>=1.0",
  "starlette>=0.31"
]

[project.optional-dependencies]
sse = [
  "uvicorn>=0.30"
]

[project.scripts]
grafana-fastmcp = "app.main:main"

[project.urls]
Homepage = "https://github.com/sandersouza/grafanaFastMCP"
Repository = "https://github.com/sandersouza/grafanaFastMCP"
Issues = "https://github.com/sandersouza/grafanaFastMCP/issues"

# Hatch build configuration: explicitly include project packages
[tool.hatch.build.targets.wheel]
packages = [
  "app",
  "mcp"
]

# uv dependency groups for dev/test/lint flows
[tool.uv]
dev-dependencies = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff"
]

[tool.flake8]
max-line-length = 132

# Optional tool configs (kept minimal; project already has pytest.ini and ruff cache)
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
